# papercast-plugin-template

./: setup.cfg
