[metadata]
name = papercast_plugin_template # REPLACE WITH YOUR PLUGIN NAME
version = 0.1.0
author = <your-name>
author_email = <your-email>
description = Plugin Template for Papercast
url = https://github.com/papercast-dev/papercast-plugin-template # REPLACE WITH YOUR REPO URL

[options]
packages = find:
install_requires =
    # Any dependencies required by the plugin

[options.entry_points]
papercast.subscribers =
    ExampleSubscriber = papercast_plugin_example:ExampleSubscriber

papercast.processors =
    ExampleProcessor = papercast_plugin_example:ExampleProcessor

papercast.publishers =
    ExamplePublisher = papercast_plugin_example:ExamplePublisher

papercast.types = 
    ExampleType = papercast_plugin_example:ExampleType

[bumpver]
current_version = "0.2.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = True
tag = True
push = True

[bumpver:file_patterns]
setup.cfg =
    current_version = "{version}"